--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">AOP-Part3-Chapter5</string>
+    <string name="app_name">Tinder</string>
+    <string name="facebook_app_id">3683882478387382</string>
+    <string name="fb_login_protocol_scheme">fb3683882478387382</string>
 </resources>
